set up web-app and database

--- a/web-app/Pipfile
+++ b/web-app/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 pylint = "*"
 black = "*"
+flask = "*"
+pymongo = "*"
+python-dotenv = "*"
+dnspython = "*"
 
 [dev-packages]
 
