put everything in docker containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,28 @@ services:
       - mongodb_data:/data/db
 
   seed:
-    build: ./seed
+    build:
+      context: .
+      dockerfile: seed/Dockerfile
     container_name: seed
-    environment:
-      MONGO_URI: ${MONGO_URI}
-      DB_NAME: ${DB_NAME}
+    env_file:
+      - .env
     depends_on:
       - mongodb
+    restart: "no" 
+
+  ml-client:
+    build:
+      context: .
+      dockerfile: machine_learning_client/Dockerfile
+    container_name: ml-client
+    env_file:
+      - .env 
+    depends_on:
+      - mongodb
+    ports:
+      - "8000:8000"
+    
 
   web-app:
     build:
@@ -26,11 +41,12 @@ services:
     container_name: web-app
     ports:
       - "5001:5001"
-    environment:
-      MONGO_URI: ${MONGO_URI}
-      DB_NAME: ${DB_NAME}
+    env_file:
+      - .env
     depends_on:
       - seed
+      - ml-client
+
 
 volumes:
   mongodb_data:
