--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -2,13 +2,18 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Copy ONLY the contents of the web_app folder into the container
-COPY . /app
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && apt-get clean
 
+# Copy ONLY the contents of the web_app folder into the container
+COPY web_app/requirements.txt ./requirements.txt
 # Install the web app dependencies
-RUN pip install --no-cache-dir -r web_app/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY web_app/ .
 
 EXPOSE 5001
 
-CMD ["python", "web_app/app.py"]
+CMD ["python", "app.py"]
 
