--- a/machine_learning_client/requirements.txt
+++ b/machine_learning_client/requirements.txt
@@ -7,3 +7,7 @@ fastapi
 uvicorn[standard]
 requests
 python-multipart
+pytest>=7.0.0
+pytest-cov>=4.0.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.10.0
