--- a/machine_learning_client/Pipfile
+++ b/machine_learning_client/Pipfile
@@ -10,6 +10,10 @@ pymongo = "*"
 python-dotenv = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+pytest-asyncio = "*"
+pytest-mock = "*"
 
 [requires]
 python_version = "3.10"
