--- a/env.example
+++ b/env.example
@@ -3,3 +3,4 @@ DB_NAME=EXAMPLE_DB_NAME
 SPEECH_REGION=EXAMPLE_SPEECH_REGION
 SPEECH_KEY=EXAMPLE_SPEECH_KEY
 ML_SERVICE_URL=EXAMPLE_ML_SERVICE_URL
+SECRET_KEY=EXAMPLE_SECRET_KEY
