--- a/web_app/Pipfile
+++ b/web_app/Pipfile
@@ -7,11 +7,15 @@ name = "pypi"
 pylint = "*"
 black = "*"
 flask = "*"
+flask-login = "*"
 pymongo = "*"
 python-dotenv = "*"
 dnspython = "*"
+requests = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-flask = "*"
+pytest-cov = "*"
 
-[requires]
-python_version = "3.10"
+
