--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,11 @@ name: Web App CI
 
 on:
   push:
+    paths:
+      - 'web_app/**'
   pull_request:
+    paths:
+      - 'web_app/**'
 
 jobs:
   test:
@@ -17,18 +21,18 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install pipenv
+      - name: Upgrade pip and install pipenv
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
 
       - name: Install dependencies
         working-directory: web_app
-        run: pipenv install --dev
+        run: pipenv install --deploy --dev
 
       - name: Run unit tests with coverage
         working-directory: web_app
-        run: pipenv run python -m pytest flaskTests.py --cov=. --cov-fail-under=80
+        run: pipenv run pytest --cov=. --cov-fail-under=80
 
       - name: Upload coverage report (optional)
         if: success()
@@ -36,4 +40,3 @@ jobs:
         with:
           name: coverage-report
           path: web_app/htmlcov/
-
