--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,7 @@ name: Web App CI
 
 on:
   push:
-    paths:
-      - 'web_app/**'
   pull_request:
-    paths:
-      - 'web_app/**'
 
 jobs:
   test:
@@ -21,22 +17,20 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Upgrade pip and install pipenv
-        run: |
-          python -m pip install --upgrade pip
-          pip install pipenv
+      - name: Install pipenv
+        run: python -m pip install --upgrade pip && pip install pipenv
 
       - name: Install dependencies
-        working-directory: web_app
-        run: pipenv install --deploy --dev
+        working-directory: ./web_app
+        run: pipenv install --dev
 
       - name: Run unit tests with coverage
-        working-directory: web_app
-        run: pipenv run pytest --cov=. --cov-fail-under=80
+        working-directory: ./web_app
+        run: pipenv run pytest flaskTests.py --cov=. --cov-fail-under=80
 
       - name: Upload coverage report (optional)
         if: success()
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
-          path: web_app/htmlcov/
+          path: ./web_app/htmlcov/
