--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,11 @@ name: Web App CI
 
 on:
   push:
+    paths:
+      - 'web_app/**'
   pull_request:
+    paths:
+      - 'web_app/**'
 
 jobs:
   test:
@@ -12,25 +16,35 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
       - name: Install pipenv
-        run: python -m pip install --upgrade pip && pip install pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+
+      - name: Debug Python environment
+        run: |
+          python --version
+          pip --version
+          pipenv --version
+          pipenv --venv
 
       - name: Install dependencies
-        working-directory: ./web_app
+        working-directory: web_app
         run: pipenv install --dev
 
       - name: Run unit tests with coverage
-        working-directory: ./web_app
-        run: pipenv run pytest flaskTests.py --cov=. --cov-fail-under=80
+        working-directory: web_app
+        run: pipenv run python -m pytest flaskTests.py --cov=. --cov-fail-under=80 -v
 
-      - name: Upload coverage report (optional)
+      - name: Upload coverage report
         if: success()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: ./web_app/htmlcov/
+          path: web_app/htmlcov/
+
