fixing github actions again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,9 @@ on:
   push:
     paths:
       - 'web_app/**'
-      - '.github/workflows/**'
   pull_request:
     paths:
       - 'web_app/**'
-      - '.github/workflows/**'
 
 jobs:
   test:
@@ -28,25 +26,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
 
-      - name: Debug Python environment
-        run: |
-          python --version
-          pip --version
-          pipenv --version
-          pipenv --venv
-
-      - name: Install dependencies
+      - name: Create Pipenv virtualenv & install dependencies
         working-directory: web_app
-        run: pipenv install --dev
+        run: |
+          pipenv --python 3.10
+          pipenv install --dev
 
       - name: Run unit tests with coverage
         working-directory: web_app
-        run: pipenv run python -m pytest flaskTests.py --cov=. --cov-fail-under=80 -v
+        run: pipenv run python -m pytest flaskTests.py --cov=. --cov-fail-under=80
 
       - name: Upload coverage report
-        if: success()
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: web_app/htmlcov/
-
