--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,44 +1,39 @@
 name: Web App CI
 
-on:
-  push:
-    paths:
-      - 'web_app/**'
-  pull_request:
-    paths:
-      - 'web_app/**'
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Only run for web_app for now
+        subdir: [web_app]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install pipenv
+      - name: Install dependencies
         run: |
+          cd ${{ matrix.subdir }}
           python -m pip install --upgrade pip
           pip install pipenv
-
-      - name: Create Pipenv virtualenv & install dependencies
-        working-directory: web_app
-        run: |
           pipenv --python 3.10
           pipenv install --dev
 
       - name: Run unit tests with coverage
-        working-directory: web_app
-        run: pipenv run python -m pytest flaskTests.py --cov=. --cov-fail-under=80
+        run: |
+          cd ${{ matrix.subdir }}
+          pipenv run python -m pytest flaskTests.py --cov=. --cov-fail-under=80
 
       - name: Upload coverage report
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: web_app/htmlcov/
+          path: ${{ matrix.subdir }}/htmlcov/
