changed pipfile for machine learning

--- a/machine_learning_client/Pipfile
+++ b/machine_learning_client/Pipfile
@@ -13,6 +13,9 @@ python-dotenv = "*"
 pytest = "*"
 pytest-cov = "*"
 pytest-asyncio = "*"
+fastapi = "*"
+bson = "*"
+pytest-asyncio = "*"
 pytest-mock = "*"
 
 [requires]
