--- a/.github/workflows/ci-ml.yml
+++ b/.github/workflows/ci-ml.yml
@@ -22,18 +22,22 @@ jobs:
           python-version: "3.10"
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libsndfile1 portaudio19-dev
+        run: sudo apt-get update && sudo apt-get install -y libsndfile1 portaudio19-dev ffmpeg
 
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Set dummy Azure environment variables
+        run: |
+          echo "SPEECH_KEY=dummy" >> $GITHUB_ENV
+          echo "SPEECH_REGION=dummy" >> $GITHUB_ENV
+
       - name: Mock system modules for CI
         run: |
           echo "import sys; from unittest.mock import MagicMock; sys.modules['audioop'] = MagicMock()" > conftest.py
+          echo "import sys; from unittest.mock import MagicMock; sys.modules['pronun_assess'] = MagicMock()" >> conftest.py
 
       - name: Run Machine Learning Client Tests
-        run: |
-          export PYTHONPATH=$PWD
-          pytest --cov=. --cov-fail-under=80
+        run: pytest --cov=. --cov-fail-under=80 --import-mode=importlib
