--- a/.github/workflows/ci-ml.yml
+++ b/.github/workflows/ci-ml.yml
@@ -8,7 +8,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: machine_learning_client
+        working-directory: machine-learning-client
 
     steps:
       - name: Checkout repo
