--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,11 @@ jobs:
           pip install pipenv
 
       - name: Install dependencies
-        working-directory: web-app
+        working-directory: web_app
         run: pipenv install --dev
 
       - name: Run tests with coverage
-        working-directory: web-app
+        working-directory: web_app
         run: |
           pipenv run pytest flaskTests.py \
             --cov=app \
