removed you said

--- a/web_app/Pipfile
+++ b/web_app/Pipfile
@@ -6,15 +6,18 @@ name = "pypi"
 [packages]
 pylint = "*"
 black = "*"
+requests = "*"
 flask = "*"
-flask-login = "*"
 pymongo = "*"
 python-dotenv = "*"
 dnspython = "*"
-requests = "*"
+azure-cognitiveservices-speech = "*"
+azure-identity = "*"
+azure-keyvault-secrets = "*"
+flask-login = "*"
 
 [dev-packages]
-pytest = "*"
 pytest-flask = "*"
 exceptiongroup = "*"
+pytest = "*"
 pytest-cov = "*"
