--- a/.github/workflows/ci-ml.yml
+++ b/.github/workflows/ci-ml.yml
@@ -6,10 +6,6 @@ jobs:
   test-ml-service:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: machine_learning_client
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -20,9 +16,12 @@ jobs:
           python-version: "3.10"
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libsndfile1 portaudio19-dev ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsndfile1 portaudio19-dev ffmpeg
 
       - name: Install Python dependencies
+        working-directory: machine_learning_client
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -43,9 +42,9 @@ jobs:
       - name: Run tests with coverage
         run: |
           pytest \
-            --cov=audio_store \
-            --cov=convert \
-            --cov=pronun_assess \
+            machine_learning_client/tests \
+            --cov=machine_learning_client.audio_store \
+            --cov=machine_learning_client.convert \
+            --cov=machine_learning_client.pronun_assess \
             --cov-fail-under=80 \
             --import-mode=importlib
-
