changed ci for ml4

--- a/.github/workflows/ci-ml.yml
+++ b/.github/workflows/ci-ml.yml
@@ -41,9 +41,8 @@ jobs:
         working-directory: machine_learning_client
         run: |
           pytest \
-            --cov=audio_store \
-            --cov=convert \
-            --cov=pronun_assess \
+            --cov=. \
+            --cov-report=term-missing \
             --cov-fail-under=80 \
             --import-mode=importlib \
             tests
