no coverage for test files

--- a/.github/workflows/ci-ml.yml
+++ b/.github/workflows/ci-ml.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: machine_learning_client
         run: |
           pytest \
-            --cov=. \
+            --cov=machine_learning_client \
             --cov-report=term-missing \
             --cov-fail-under=80 \
             --import-mode=importlib \
